[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
# 解析
serde = { version = "1.0", features = ["derive"] }
# 解析yaml
serde_yaml = "0.9"
# 请求库
reqwest = { version = "0.11", features = ["json"] }
# 异步处理库 支持io，stream
tokio = { version = "1", features = ["full"] }
http = "0.2"
anyhow = "1.0"
